--- a/style.css
+++ b/style.css
@@ -129,8 +129,8 @@ a:hover {color:#1446be}
 .table
 {
     position:absolute;
-    top: 321px;
-    left: 315px;
+    top: 340px;
+    left: 200px;
     background-color: #BFAF80;
 }
 .homePage
@@ -152,3 +152,98 @@ a:hover {color:#1446be}
     top: 1150px;
     left: 314px;
 }
+
+/* CSS Style Classes below are for the dropdown menu*/
+.dropbtn {
+    background-color: #F2EEB3;
+    color: black;
+    padding: 16px;
+    font-size: 18px;
+    border: none;
+    cursor: pointer;
+    
+}
+
+.dropdown {
+    position: absolute;
+    display: inline-block;
+    top: 320px;
+    left: 8px;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+
+/*Dropdown Menu possibility 2*/
+body {
+    font-family: "Lato", sans-serif;
+    transition: background-color .5s;
+}
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 1.0s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+ #main {
+    transition: margin-left .5s;
+    padding: 16px;
+    position:absolute;
+    top: 300px;
+    left: -8px;
+    color: #F2EEB3
+}
+
